Divers bug réglés